--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 
 
 <head>
-	<title>Massimiliano Alessandro - Home page </title>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-53KM4LRRHX"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
+  	gtag('config', 'G-53KM4LRRHX');
+	</script>
+	<title>Massimiliano Alessandro - Home page</title>
 	<link rel="stylesheet" href="css/styles.css"> 
 	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
