--- a/research.html
+++ b/research.html
@@ -3,7 +3,15 @@
 <html lang="en">
 
 
-<head>
+<head>	
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-53KM4LRRHX"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
+  	gtag('config', 'G-53KM4LRRHX');
+	</script>
 	<title>Massimiliano Alessandro - Research </title>
 	<link rel="stylesheet" href="css/styles.css"> 
 	<meta charset="utf-8"> 
