--- a/talks.html
+++ b/talks.html
@@ -12,7 +12,7 @@
   	gtag('js', new Date());
   	gtag('config', 'G-53KM4LRRHX');
 	</script>
-	<title>Massimiliano Alessandro - Home page </title>
+	<title>Massimiliano Alessandro - Talks</title>
 	<link rel="stylesheet" href="css/styles.css"> 
 	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
