--- a/conferences.html
+++ b/conferences.html
@@ -3,16 +3,8 @@
 <html lang="en">
 
 
-<head>	
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-53KM4LRRHX"></script>
-	<script>
-  	window.dataLayer = window.dataLayer || [];
-  	function gtag(){dataLayer.push(arguments);}
-  	gtag('js', new Date());
-  	gtag('config', 'G-53KM4LRRHX');
-	</script>
-	<title>Massimiliano Alessandro - Activities</title>
+<head>
+	<title>Massimiliano Alessandro - Home page </title>
 	<link rel="stylesheet" href="css/styles.css"> 
 	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,16 +17,18 @@
 
 	<header>
 		<div class="container">
+	
+				
 			<div class="row">
 				<div class="col">
 					<h1>
 					Massimiliano Alessandro
 					</h1>
 					<p>
-					PhD student at University of Genoa (IT) and University of Bayreuth (DE)
+					Postdoc at Universität des Saarlandes (UdS), Germany
 					</p>
 				</div>	
-			</div>
+			</div> 
 		</div>
 	</header>	
 
@@ -53,6 +47,8 @@
 						</div>
 						<div class="item">  <h4 class="nav-button" id="talks-button"> <a href="talks.html">  Talks  </a> </h4>
 						</div>
+						<div class="item">  <h4 class="nav-button" id="teaching-button"> <a href="teaching.html">  Teaching  </a> </h4>
+						</div>
 						<div class="item">  <h4 class="nav-button" id="conf-button"> <a href="conferences.html">  Activities  </a> </h4> 
 						</div> 
 	</div>
@@ -69,11 +65,53 @@
 
 	
 		<div class="conf-body"> 
+
+			<div class="title-box"><h1> Activities </h1></div>
+
 			<div>
 					<h2>Attended Conferences, Workshops and Schools</h2>
+
 					<ol>
+
 						<li>
-							<i>"GAeL XXX (Géométrie Algébrique en Liberté).</i>
+							<i>"Winter Workshop on Algebraic Geometry".</i>
+							<br>
+							Pavia, Italy, 26/02/2024 - 28/02/2024.
+	
+
+						<br>
+							<a href="https://sites.google.com/unipv.it/winter-workshop-on-ag-2024/home">Website</a> 
+						</li>
+						
+						<br>
+
+						<li>
+							<i>"Genova - Torino - Milano Seminar (GTM): some topics in commutative algebra and algebraic geometry".</i>
+							<br>
+							Milan, Italy, 05/02/2024 - 06/02/2024.
+	
+
+						<br>
+							<a href="https://sites.google.com/view/gtm2024/home">Website</a> 
+						</li>
+
+						<br>
+
+						<li>
+							<i>"New Perspectives on Enriques Surfaces".</i>
+							<br>
+							Turin, Italy, 06/12/2023 - 07/12/2023.
+	
+
+						<br>
+							<a href="https://sites.google.com/view/np-enriques/home">Website</a> 
+						</li>
+
+						<br>
+
+
+						<li>
+							<i>"GAeL XXX (Géométrie Algébrique en Liberté)".</i>
 							<br>
 							Coventry, UK, 03/07/2023 - 07/07/2023.
 	
