--- a/research.html
+++ b/research.html
@@ -3,16 +3,8 @@
 <html lang="en">
 
 
-<head>	
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-53KM4LRRHX"></script>
-	<script>
-  	window.dataLayer = window.dataLayer || [];
-  	function gtag(){dataLayer.push(arguments);}
-  	gtag('js', new Date());
-  	gtag('config', 'G-53KM4LRRHX');
-	</script>
-	<title>Massimiliano Alessandro - Research</title>
+<head>
+	<title>Massimiliano Alessandro - Research </title>
 	<link rel="stylesheet" href="css/styles.css"> 
 	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,16 +17,18 @@
 
 	<header>
 		<div class="container">
+	
+				
 			<div class="row">
 				<div class="col">
 					<h1>
 					Massimiliano Alessandro
 					</h1>
 					<p>
-					PhD student at University of Genoa (IT) and University of Bayreuth (DE)
+					Postdoc at Universität des Saarlandes (UdS), Germany
 					</p>
 				</div>	
-			</div>
+			</div> 
 		</div>
 	</header>	
 
@@ -50,6 +44,8 @@
 						<div class="item">  <h4 class="nav-button" id="research-button"> <a href="research.html">  Research  </a> </h4>
 						</div>
 						<div class="item">  <h4 class="nav-button" id="talks-button"> <a href="talks.html">  Talks  </a> </h4>
+						</div>
+						<div class="item">  <h4 class="nav-button" id="teaching-button"> <a href="teaching.html">  Teaching  </a> </h4>
 						</div>
 						<div class="item">  <h4 class="nav-button" id="conf-button"> <a href="conferences.html">  Activities  </a> </h4> 
 						</div> 
@@ -67,6 +63,9 @@
 	<!-- begin body section -->
 	
 	<div class="research-body">
+
+			<div class="title-box"><h1 > Research </h1></div>
+
 			<div>
 
 						<h2>Research Interests</h2>
