--- a/teaching_Algebraic_Surfaces.html
+++ b/teaching_Algebraic_Surfaces.html
@@ -47,7 +47,7 @@
 						</div>
 						<div class="item">  <h4 class="nav-button" id="teaching-button"> <a href="teaching.html">  Teaching  </a> </h4>
 						</div>
-						<div class="item">  <h4 class="nav-button" id="conf-button"> <a href="conferences.html">  Activities  </a> </h4> 
+						<div class="item">  <h4 class="nav-button" id="activities-button"> <a href="activities.html">  Activities  </a> </h4>
 						</div> 
 	</div>
 
