--- a/teaching_Algebraic_Surfaces.html
+++ b/teaching_Algebraic_Surfaces.html
@@ -83,13 +83,15 @@
 						<h3>Time and Place</h3>
 						<ul>
 							<li>Time: Wednesday and Thursday, 12:00-14.00.</li>
-							<li>Room: TBA.</li>
+							<li>Room: Gebäude E2 4 - Seminarraum 6.</li>
 						</ul>
 						<p> <b> Note:</b> The course will be held in English.</p>
 
 						<br>
 
-						<h3> Content </h3> TBA
+						<h3> Content </h3> 
+
+						<h4> The principal aim of this course is to achieve the so-called Enriques-Kodaira classification of complex algebraic surfaces.  </h4>
 
 						<!--
 						<ul>
@@ -97,7 +99,7 @@
 							<li>...</li>
 						</ul>
 						-->
-						<p> <b> Prerequisites:</b> TBA </p>
+						<p> <b> Prerequisites:</b> Linear Algebra I & II, Analysis I & II & III, Complex Analysis (Funktionentheorie). </p>
 
 						<!--
 						Linear Algebra I & II, Analysis I & II & III, Sheaf Theory.
