--- a/teaching_Algebraic_Surfaces.html
+++ b/teaching_Algebraic_Surfaces.html
@@ -91,7 +91,7 @@
 
 						<h3> Content </h3> 
 
-						<h4> The principal aim of this course is to achieve the so-called Enriques-Kodaira classification of complex algebraic surfaces.  </h4>
+						<p> The principal aim of this course is to achieve the so-called Enriques-Kodaira classification of complex algebraic surfaces.  </p>
 
 						<!--
 						<ul>
