--- a/teaching.html
+++ b/teaching.html
@@ -71,7 +71,7 @@
 			<ul>		
 				<li>Summer Semester 2024: Lecturer for <a href="teaching_Algebraic_Surfaces.html">Algebraic Surfaces</a>, Universität des Saarlandes.</li>
 				<br>
-				<li>Winter  Semester 2022/23: Assistant for exercise classes of the course "Complex Varieties" (Lecturer: Prof. Dr. Christian Gleissner), Universität Bayreuth.
+				<li>Winter  Semester 2022/23: Assistant for exercise classes of the course "Complex Varieties" (Lecturer: <a href="https://www.staff.uni-bayreuth.de/~bt300503/">Prof. Dr. Christian Gleissner</a>), Universität Bayreuth.
 				</li>
 				<br>
 				<li>Academic Year 2020/21: Tutor for the undergraduate courses "Algebra Lineare & Geometria Analitica (ALGA)", "Algebra 1" and "Analisi Matematica 1", Università degli Studi di Genova, DIMA Dipartimento di Matematica.
