--- a/teaching_Algebraic_Surfaces.html
+++ b/teaching_Algebraic_Surfaces.html
@@ -123,7 +123,7 @@
 
 						<h3>Literature</h3>
 
-						<p>The <a href="https://www.infomath-bib.de/de/welcome.shtml">Campus-Bibliothek für Informatik und Mathematik</a> set up a course reserve for this lecture, see here. </p>
+						<p>The <a href="https://www.infomath-bib.de/de/welcome.shtml">Campus-Bibliothek für Informatik und Mathematik</a> set up a course reserve for this lecture, see <a href="https://www.infomath-bib.de/tmp/vorlesungen/mathe-core_algebraic-surfaces.html">here</a>. </p>
 
 						<!--
 						<a href="https://www.infomath-bib.de/tmp/vorlesungen/mathe-core_complex_geometry.html">here</a>. </p>
