--- a/teaching_Algebraic_Surfaces.html
+++ b/teaching_Algebraic_Surfaces.html
@@ -123,6 +123,41 @@
 
 						<h3>Literature</h3>
 
+						<ul>
+							<li>
+								Badescu, Lucian. <i>Algebraic Surfaces.</i> Translated by Vladimir Masek. New York, NY: Springer, 2001. ISBN: 9780387986685.
+							</li>
+							<li>
+								Barth, Wolf P., Klaus Hulek, Chris A. M. Peters, and Antonius Van de Ven. <i>Compact Complex Surfaces.</i> 2nd ed. Berlin, Germany: Springer, 2004. ISBN: 9783540008323.
+							</li>
+
+							<li>
+								Beauville, Arnaud. <i>Complex Algebraic Surfaces.</i> 2nd ed. New York, NY: Cambridge University Press, 1996. ISBN: 9780521495103.
+							</li>
+
+							<li>
+								Griffiths, Phillip, and Joseph Harris. “Surfaces.” Chapter 4 in: <i>Principles of Algebraic Geometry.</i> New York, NY: Willey-Interscience, 1994. ISBN: 9780471050599.
+							</li>
+
+							<li>
+								Hartshorne, Robin. “Surfaces.” Chapter 5 in: <i>Algebraic Geometry.</i> New York, NY: Springer, 1997. ISBN: 9780387902449.
+							</li>
+
+							<li>
+								Iskovskikh, V.A., Shafarevich, I.R. Chapter II "Algebraic Surfaces" in: Shafarevich, I.R. (eds) <i>Algebraic Geometry II.</i> Encyclopaedia of Mathematical Sciences, vol 35. Springer, Berlin, Heidelberg,1996. ISBN: 978-3-642-64607-2
+							</li>
+
+							<li>
+								Matsuki, Kenji. Chapter 1 and 2 in: <i>Introduction to the Mori Program.</i> New York, NY: Springer, 2002. ISBN: 978-1-4419-3125-2.
+							</li>
+
+							<li>
+								Zariski, Oscar. <i>Algebraic Surfaces.</i> 2nd ed. Heidelberg, Germany: Springer Berlin, 1995. ISBN: 978-3-540-58658-6.
+							</li>
+
+							
+						</ul>
+
 						<p>The <a href="https://www.infomath-bib.de/de/welcome.shtml">Campus-Bibliothek für Informatik und Mathematik</a> set up a course reserve for this lecture, see <a href="https://www.infomath-bib.de/tmp/vorlesungen/mathe-core_algebraic-surfaces.html">here</a>. </p>
 
 						<!--
