--- a/teaching_Algebraic_Surfaces.html
+++ b/teaching_Algebraic_Surfaces.html
@@ -159,7 +159,7 @@
 							<br>
 
 							<li>
-								Griffiths, Phillip, and Joseph Harris. “Surfaces.” Chapter 4 in: <i>Principles of Algebraic Geometry.</i> New York, NY: Willey-Interscience, 1994. ISBN: 9780471050599.
+								Griffiths, Phillip, and Joseph Harris. “Surfaces.” Chapter 4 in: <i>Principles of Algebraic Geometry.</i> New York, NY: Wiley-Interscience [John Wiley & Sons], 1978. ISBN: 0-471-32792-1.
 							</li>
 
 							<br>
@@ -183,7 +183,7 @@
 							<br>
 
 							<li>
-								Zariski, Oscar. <i>Algebraic Surfaces.</i> 2nd ed. Heidelberg, Germany: Springer Berlin, 1995. ISBN: 978-3-540-58658-6.
+								Zariski, Oscar. <i>Algebraic Surfaces.</i> Second supplemented edition. With appendices by S. S. Abhyankar, J. Lipman, and D. Mumford. Preface to the appendices by Mumford. Berlin-Heidelberg-New York: Springer-Verlag, 1971. ISBN: 3-540-05335-2.
 							</li>
 
 							<br>
