--- a/teaching_Algebraic_Surfaces.html
+++ b/teaching_Algebraic_Surfaces.html
@@ -159,7 +159,7 @@
 							<br>
 
 							<li>
-								Griffiths, Phillip, and Joseph Harris. “Surfaces.” Chapter 4 in: <i>Principles of Algebraic Geometry.</i> New York, NY: Wiley-Interscience [John Wiley & Sons], 1978. ISBN: 0-471-32792-1.
+								Griffiths, Phillip, and Joseph Harris. “Surfaces.” Chapter 4 in: <i>Principles of Algebraic Geometry.</i> New York, NY: Wiley-Interscience [John Wiley & Sons], 1978. ISBN: 978-0-471-32792-9.
 							</li>
 
 							<br>
