--- a/talks.html
+++ b/talks.html
@@ -75,6 +75,13 @@
 					<h2>Conference Talks</h2>
 					<ol>
 						<li>
+							<i>"AC3 surfaces: a new family of surfaces of general type with p_g=q=2".</i> 
+							<br>
+							Joint Meeting AMS-UMI 2024, Università degli Studi di Palermo, Italy, 23-24 July 2024
+
+						<br>
+							
+						<li>
 							<i>"Semi-projective representations and diffeomorphisms of complex torus quotients".</i> 
 							<br>
 							Genova - Torino - Milano Seminar (GTM): some topics in commutative algebra and algebraic geometry, Università degli Studi di Milano, Italy, 6 February 2024
@@ -143,6 +150,15 @@
 					<h2>Internal Talks</h2>
 
 					<ol start="7">
+
+						<li>
+							<i>"On the Classification of Surfaces of General Type with p_g=q =2".</i>
+							<br>
+							Oberseminar Algebraische Geometrie, Universität des Saarlandes, Saarbrücken, Germany, 16 July 2024.
+						</li>
+
+						<br>
+						
 						<li>
 							<i>"On a new construction method for surfaces of general type with p_g=q =2".</i>
 							<br>
