--- a/talks.html
+++ b/talks.html
@@ -81,8 +81,8 @@
 							<br>
 							Arithmetic and Geometry of Low-Dimensional Algebraic Varieties, Joint Meeting AMS-UMI 2024, Università degli Studi di Palermo, Italy, 23-24 July 2024
 
-						
-							<a href="https://sites.google.com/view/low-dimensional-varieties-2024/home">Website</a>  &nbsp &nbsp &nbsp <a href="files/2024-Palermo-locandina">Poster</a> 
+						<br>
+							<a href="https://sites.google.com/view/low-dimensional-varieties-2024/home">Website</a>  &nbsp &nbsp &nbsp <a href="files/2024-Palermo-locandina.pdf">Poster</a> 
 
 						</li>	
 
