--- a/activities.html
+++ b/activities.html
@@ -84,6 +84,19 @@
 						</li>
 
 						<br>
+
+						<li>
+							
+							<i>"Arithmetic and Geometry of Low-Dimensional Algebraic Varieties (Joint Meeting AMS-UMI 2024)".</i> 
+							<br>
+							Palermo, Italy, 23/07/2024 - 24/07/2024
+
+						<br>
+							<a href="https://sites.google.com/view/low-dimensional-varieties-2024/home">Website</a>  
+
+						</li>	
+
+						<br>
 						
 						<li>
 							<i>"Upper-Rhine and Tributaries Algebraic Geometry Seminar (URTAGS): Strasbourg 2024".</i>
