--- a/talks.html
+++ b/talks.html
@@ -81,7 +81,7 @@
 							
 							<i>"AC3 surfaces: a new family of surfaces of general type with p_g=q=2".</i> 
 							<br>
-							Arithmetic and Geometry of Low-Dimensional Algebraic Varieties, Joint Meeting AMS-UMI 2024, Università degli Studi di Palermo, Italy, 23-24 July 2024
+							Arithmetic and Geometry of Low-Dimensional Algebraic Varieties (Joint Meeting AMS-UMI 2024), Università degli Studi di Palermo, Italy, 23-24 July 2024
 
 						<br>
 							<a href="https://sites.google.com/view/low-dimensional-varieties-2024/home">Website</a>  &nbsp &nbsp &nbsp <a href="files/2024-Palermo-locandina.pdf">Poster</a> 
