--- a/teaching.html
+++ b/teaching.html
@@ -69,6 +69,8 @@
 			<div class="title-box"><h1> Teaching </h1></div>
 
 			<ul>		
+				<li>Summer Semester 2025: Lecturer for <a href="teaching_Seminar_Topologie.html">Algebraic Surfaces</a>, Universität des Saarlandes.</li>
+				<br>
 				<li>Winter Semester 2024/25: Assistant for the course <a href="https://cms.sic.saarland/la1/">"Lineare Algebra I"</a>, Universität des Saarlandes.</li>
 				<br>
 				<li>Summer Semester 2024: Lecturer for <a href="teaching_Algebraic_Surfaces.html">Algebraic Surfaces</a>, Universität des Saarlandes.</li>
