--- a/teaching.html
+++ b/teaching.html
@@ -69,7 +69,7 @@
 			<div class="title-box"><h1> Teaching </h1></div>
 
 			<ul>		
-				<li>Summer Semester 2025: Lecturer for <a href="teaching_Seminar_Topologie.html">Algebraic Surfaces</a>, Universität des Saarlandes.</li>
+				<li>Summer Semester 2025: Lecturer for the Seminar <a href="teaching_Seminar_Topologie.html">Einführung in die Topologie</a>, Universität des Saarlandes.</li>
 				<br>
 				<li>Winter Semester 2024/25: Assistant for the course <a href="https://cms.sic.saarland/la1/">"Lineare Algebra I"</a>, Universität des Saarlandes.</li>
 				<br>
