--- a/teaching_Seminar_Topologie.html
+++ b/teaching_Seminar_Topologie.html
@@ -76,7 +76,7 @@
 			
 
 				<div class="section-topologie">
-					<ul style="list-style-type:none;">
+					<ul class="section-topologie-list">
 						<li><b>Dozent:</b> Dr. Massimiliano Alessandro</li>
 						<li><b>Termine:</b> donnerstags 14-16.</li>
 						<li><b>Raum:</b> SR10 (Gebäude E2.4).</li>
