--- a/teaching_Seminar_Topologie.html
+++ b/teaching_Seminar_Topologie.html
@@ -112,7 +112,7 @@
 					</ul> 
 					</p>
 
-					<p> <b> Vorkenntnisse:</b>  Lineare Algebra I (evtl. II), Analysis I (evtl. II), oder die entsprechenden Teile von MfI I−III. </p>
+					<p> <b> Vorkenntnisse:</b> Lineare Algebra I, Analysis I, oder die entsprechenden Teile von MfI I−III bzw. HMI I−III. </p>
 
 					<p><b>Wichtig:</b> Die Vorträge werden nach dem first come/first served Prinzip verteilt. Der Inhalt des jeweiligen Vortrags soll mit mir ein bis zwei Wochen vor dem Vortragstermin besprochen werden.</p>
 				</div>
