--- a/teaching.html
+++ b/teaching.html
@@ -69,11 +69,11 @@
 			<div class="title-box"><h1> Teaching </h1></div>
 
 			<ul>		
-				<li>Summer Semester 2025: Lecturer for the Seminar <a href="teaching_Seminar_Topologie.html">Einführung in die Topologie</a>, Universität des Saarlandes.</li>
+				<li>Summer Semester 2025: Lecturer for the Seminar <a href="teaching_Seminar_Topologie.html">"Einführung in die Topologie"</a>, Universität des Saarlandes.</li>
 				<br>
 				<li>Winter Semester 2024/25: Assistant for the course <a href="https://cms.sic.saarland/la1/">"Lineare Algebra I"</a>, Universität des Saarlandes.</li>
 				<br>
-				<li>Summer Semester 2024: Lecturer for <a href="teaching_Algebraic_Surfaces.html">Algebraic Surfaces</a>, Universität des Saarlandes.</li>
+				<li>Summer Semester 2024: Lecturer for <a href="teaching_Algebraic_Surfaces.html">"Algebraic Surfaces"</a>, Universität des Saarlandes.</li>
 				<br>
 				<li>Winter  Semester 2022/23: Assistant for exercise classes of the course "Complex Varieties" (Lecturer: <a href="https://www.staff.uni-bayreuth.de/~bt300503/">Prof. Dr. Christian Gleissner</a>), Universität Bayreuth.
 				</li>
