--- a/teaching_Seminar_Topologie.html
+++ b/teaching_Seminar_Topologie.html
@@ -158,6 +158,10 @@
 						<li>Bredon, Topology and Geometry</li>
 						<li>Mayer, Algebraische Topologie</li>
 						<li>Fulton, Algebraic Topology, A First Course</li>
+						<li>William S. Massey, A Basic Course in Algebraic Topology</li>
+						<li>A. Hatcher, <em><a href="https://pi.math.cornell.edu/~hatcher/AT/AT+.pdf">Algebraic Topology</em></li>
+						<li>M.A. Armstrong, Basic Topology</li>
+						<li>R. Engelking, General Topology (Revised and completed edition)</li>
 					</ul>
 
 
