--- a/teaching_Seminar_Topologie.html
+++ b/teaching_Seminar_Topologie.html
@@ -143,9 +143,9 @@
 					<div class="sub-title"><h3>Literatur</h3></div>
 
 					Zu dieser Veranstaltung wird von der <a href="https://www.infomath-bib.de/de/welcome.shtml">Campus-Bibliothek für Informatik und Mathematik</a> ein Semesterapparat eingerichtet.
-					<!--
-					Eine Übersicht befindet sich <a>hier</a>.
-					-->
+					
+					Eine Übersicht befindet sich <a href="https://www.infomath-bib.de/tmp/vorlesungen/mathe-core_einfuehrung-in-die-topologie.html">hier</a>.
+					
 
 
 					<br>
