--- a/teaching.html
+++ b/teaching.html
@@ -68,10 +68,16 @@
 
 			<div class="title-box"><h1> Teaching </h1></div>
 
-			<ul>		
+			<ul>
+				<li>Summer Semester 2026: Lecturer for the course "Commutative Algebra and Introduction to Algebraic Geometry", Universität des Saarlandes.</li>
+				<br>
+				<li>Winter Semester 2025/26:  Assistant for the course <a href="https://www.uni-saarland.de/lehrstuhl/lazic/teaching/algebra-wintersemester-2025/26.html">"Algebra"</a>, Universität des Saarlandes.</li>
+				<br>
 				<li>Summer Semester 2025: Lecturer for the Seminar <a href="teaching_Seminar_Topologie.html">"Einführung in die Topologie"</a>, Universität des Saarlandes.</li>
 				<br>
-				<li>Winter Semester 2024/25: Assistant for the course <a href="https://cms.sic.saarland/la1/">"Lineare Algebra I"</a>, Universität des Saarlandes.</li>
+				<li>Summer Semester 2025: Assistant for the course <a href="https://www.uni-saarland.de/lehrstuhl/lazic/teaching/lineare-algebra-ii-sommersemester-2025.html"> "Lineare Algebra II"</a>, Universität des Saarlandes.</li>
+				<br>
+				<li>Winter Semester 2024/25: Assistant for the course <a href="https://www.uni-saarland.de/lehrstuhl/lazic/teaching/lineare-algebra-i-wintersemester-2024/25.html">"Lineare Algebra I"</a>, Universität des Saarlandes.</li>
 				<br>
 				<li>Summer Semester 2024: Lecturer for <a href="teaching_Algebraic_Surfaces.html">"Algebraic Surfaces"</a>, Universität des Saarlandes.</li>
 				<br>
@@ -99,3 +105,4 @@
 
 </body>
 </html>
+
