--- a/teaching.html
+++ b/teaching.html
@@ -69,7 +69,7 @@
 			<div class="title-box"><h1> Teaching </h1></div>
 
 			<ul>
-				<li>Summer Semester 2026: Lecturer for the course <a href="teaching_CommAlg_AlgGeo.html">"Commutative Algebra and Introduction to Algebraic Geometry"</a>, Universität des Saarlandes.</li>
+				<li>Summer Semester 2026: Lecturer for the course <a href="teaching_CommAlg_AG.html">"Commutative Algebra and Introduction to Algebraic Geometry"</a>, Universität des Saarlandes.</li>
 				<br>
 				<li>Winter Semester 2025/26:  Assistant for the course <a href="https://www.uni-saarland.de/lehrstuhl/lazic/teaching/algebra-wintersemester-2025/26.html">"Algebra"</a>, Universität des Saarlandes.</li>
 				<br>
@@ -105,5 +105,6 @@
 
 </body>
 </html>
+
 
 
