--- a/teaching_CommAlg_AG.html
+++ b/teaching_CommAlg_AG.html
@@ -88,7 +88,7 @@
 						<p>
 							<b>Lectures:</b> Tuesday 16-18, Wednesday 14-16.
 							<br>
-							<b>Exercise Class:</b>  Thursday, 14-16.
+							<b>Exercise Class:</b>  Thursday 14-16.
 							<br>
 							<b>Room:</b> SR6.
 						</p>
@@ -244,3 +244,4 @@
 </body>
 
 </html>
+
