--- a/teaching_CommAlg_AG.html
+++ b/teaching_CommAlg_AG.html
@@ -86,11 +86,10 @@
 
 						<h3>Time and Place</h3>
 						<p>
-							<b>Lectures:</b> Tuesday 16-18, Wednesday 14-16.
+							<b>Lectures:</b> Tuesday 16-18 in SR6, Wednesday 14-16 in SR6.
 							<br>
-							<b>Exercise Class:</b>  Thursday 14-16.
+							<b>Exercise Class:</b>  Thursday 14-16 in SR6.
 							<br>
-							<b>Room:</b> SR6.
 						</p>
 						<p> <b> Note:</b> The course will be held in English.</p>
 
@@ -244,4 +243,5 @@
 </body>
 
 </html>
+
 
