--- a/teaching_CommAlg_AG.html
+++ b/teaching_CommAlg_AG.html
@@ -116,7 +116,7 @@
 						<br>
 
 						<h3> Registration</h3>
-						<p>TBA</p>
+						<p>To register for the course, please send an email to malessandro [add @math.uni-sb.de]. This email should include also the following data: Name, Surname and Matrikelnummer.</p>
 						
 						
 						<br>
@@ -136,6 +136,14 @@
 								<li>the passed exam.</li>
 
 							</ul>
+
+							<br>
+
+							Exercise sheets are uploaded weekly on the CMS website and are to be completed by the following week (Tuesday).
+							<br>
+							The submission of the exercise sheets takes place via CMS.
+							<br>
+							The sheets are corrected during the exercise class and returned with points awarded.
 						</p>
 
 						<br>
@@ -243,5 +251,6 @@
 </body>
 
 </html>
+
 
 
