--- a/teaching_CommAlg_AG.html
+++ b/teaching_CommAlg_AG.html
@@ -136,8 +136,14 @@
 			
 				
 						<h3>Exam criteria</h3>
+	
 
-						<p>In order to obtain a grade, the following criteria are to be fulfilled:
+						<p> Exercise sheets are uploaded weekly on the CMS website and are to be completed by the following week (Tuesday).
+							The submission of the exercise sheets takes place via CMS.
+							The sheets are corrected during the exercise class and returned with points awarded.
+						</p>
+						<p>
+							In order to obtain a grade, the following criteria are to be fulfilled:
 							<ul>
 								<li>regular participation at the exercise classes,</li>
 
@@ -151,9 +157,6 @@
 
 							</ul>
 
-							Exercise sheets are uploaded weekly on the CMS website and are to be completed by the following week (Tuesday).
-							The submission of the exercise sheets takes place via CMS.
-							The sheets are corrected during the exercise class and returned with points awarded.
 						</p>
 
 						<br>
@@ -261,6 +264,7 @@
 </body>
 
 </html>
+
 
 
 
