--- a/teaching_CommAlg_AG.html
+++ b/teaching_CommAlg_AG.html
@@ -138,7 +138,7 @@
 						<h3>Exam criteria</h3>
 	
 
-						<p> Exercise sheets are uploaded weekly on the CMS website and are to be completed by the following week (Tuesday).
+						<p> Exercise sheets are uploaded weekly on the CMS website and are to be solved by the following week (Tuesday).
 							The submission of the exercise sheets takes place via CMS.
 							The sheets are corrected during the exercise class and returned with points awarded.
 						</p>
@@ -264,6 +264,7 @@
 </body>
 
 </html>
+
 
 
 
