--- a/teaching_CommAlg_AG.html
+++ b/teaching_CommAlg_AG.html
@@ -84,6 +84,17 @@
 
 						<br>
 
+						<h3>Tutor</h3>
+						<p>
+							< a href="https://tobimath.de/en"> Tobias Schnieders </a>
+							
+							<br>
+
+							Office hours: by appointment via email.
+						</p>
+
+						<br>
+
 						<h3>Time and Place</h3>
 						<p>
 							<b>Lectures:</b> Tuesday 16-18 in SR6, Wednesday 14-16 in SR6.
@@ -124,10 +135,11 @@
 						<h3>Exam Dates</h3>
 
 						<p>
-							First Exam: TBA
+							First Exam: 30.07.2026, 9-12, in HS II (Gebäude E2 5)
 							<br>
-							Second Exam: TBA
+							Second Exam: 07.10.2026, 9-12, in HS III (Gebäude E2 5)
 						</p>
+				
 						<p>
 						<b>Important:</b> If you are unable to register for the first or second exam in LSF, please contact me by email (your examination office must send me a confirmation in good time before the exam stating that you are permitted to take it). If permitted by your examination regulations, the second exam may be used to improve your grade.
 						</p>	
@@ -264,6 +276,7 @@
 </body>
 
 </html>
+
 
 
 
