--- a/teaching_CommAlg_AG.html
+++ b/teaching_CommAlg_AG.html
@@ -135,9 +135,9 @@
 						<h3>Exam Dates</h3>
 
 						<p>
-							First Exam: 30.07.2026, 9-12, in HS II (Gebäude E2 5)
+							First Exam (Hauptklausur): <b>30.07.2026, 9-12, in HS II (Gebäude E2 5)</b>
 							<br>
-							Second Exam: 07.10.2026, 9-12, in HS III (Gebäude E2 5)
+							Second Exam (Nachklausur): <b>07.10.2026, 9-12, in HS III (Gebäude E2 5)</b>
 						</p>
 				
 						<p>
@@ -276,6 +276,7 @@
 </body>
 
 </html>
+
 
 
 
