--- a/teaching_CommAlg_AG.html
+++ b/teaching_CommAlg_AG.html
@@ -176,7 +176,7 @@
 						<h3>Literature</h3>
 
 						<ul>
-							<li>Atiyah, Macdonald. <i>"Introduction to Commutative Algebra"</i>.</li>
+							<li>Atiyah, Macdonald. <i>Introduction to Commutative Algebra</i>.</li>
 						
 							<br>
 
@@ -276,6 +276,7 @@
 </body>
 
 </html>
+
 
 
 
