--- a/teaching_CommAlg_AG.html
+++ b/teaching_CommAlg_AG.html
@@ -150,9 +150,9 @@
 						<h3>Exam criteria</h3>
 	
 
-						<p> Exercise sheets are uploaded weekly on the CMS website and are to be solved by the following week (Tuesday).
-							The submission of the exercise sheets takes place via CMS.
-							The sheets are corrected during the exercise class and returned with points awarded.
+						<p> Exercise sheets are uploaded weekly (on Tuesdays) on the <a href="https://cms.sic.saarland/commalg/">CMS website</a> and must be solved by the following week (Tuesday).
+							Submission of the exercise sheets takes place via CMS. 
+							The submitted sheets will be corrected and returned with the awarded points via CMS.
 						</p>
 						<p>
 							In order to obtain a grade, the following criteria are to be fulfilled:
@@ -276,6 +276,7 @@
 </body>
 
 </html>
+
 
 
 
