--- a/teaching_CommAlg_AG.html
+++ b/teaching_CommAlg_AG.html
@@ -106,6 +106,13 @@
 
 						<br>
 
+						<h3>Learning Goals</h3>
+						<p>
+						After completing this course, students will be able to understand and apply the basic concepts, methods, and techniques of Commutative Algebra and classical Algebraic Geometry.	
+						</p>
+
+						<br>
+				
 						<h3> Content </h3> 
 						<ul>
 							<li> Hilbert's Basis theorem, Hilbert's Nullstellensatz</li>
@@ -157,7 +164,7 @@
 						<p>
 							In order to obtain a grade, the following criteria are to be fulfilled:
 							<ul>
-								<li>regular participation at the exercise classes,</li>
+								<li>regular participation in the exercise classes,</li>
 
 								<br>
 
@@ -276,6 +283,7 @@
 </body>
 
 </html>
+
 
 
 
